--- a/.github/workflows/issue-sync.yml
+++ b/.github/workflows/issue-sync.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
       - name: Convert project number to ID
         id: convert_project_number_to_id
-        uses: Beastslash/actions-convert-project-number-to-id@main
+        uses: Beastslash/actions-get-project-id-from-number@v1.0.0
         with:
           github-project-number: ${{ vars.ISSUES_SYNC_GITHUB_PROJECT_NUMBER }}
           github-app-id: ${{ vars.ISSUES_SYNC_GITHUB_APP_ID }}
@@ -21,7 +21,7 @@ jobs:
       - name: Convert issue number to project item ID
         id: convert_issue_number_to_project_item_id
         if: steps.convert_project_number_to_id.outputs.GITHUB_PROJECT_ID != 0
-        uses: Beastslash/actions-convert-issue-number-to-project-item-id@main
+        uses: Beastslash/actions-get-project-item-id-from-issue-number@v1.0.0
         with:
           github-project-id: ${{ steps.convert_project_number_to_id.outputs.GITHUB_PROJECT_ID }}
           github-app-id: ${{ vars.ISSUES_SYNC_GITHUB_APP_ID }}
@@ -29,7 +29,7 @@ jobs:
           github-app-installation-id: ${{ vars.ISSUES_SYNC_GITHUB_APP_INSTALLATION_ID }}
       - name: Convert project field name to ID
         id: convert_project_field_name_to_ID
-        uses: Beastslash/actions-convert-project-field-name-to-id@main
+        uses: Beastslash/actions-get-project-field-id-from-name@v1.0.1
         if: steps.convert_project_number_to_id.outputs.GITHUB_PROJECT_ID != 0 && steps.convert_issue_number_to_project_item_id.outputs.GITHUB_PROJECT_ITEM_ID != 0
         with:
           github-project-id: ${{ steps.convert_project_number_to_id.outputs.GITHUB_PROJECT_ID }}
